<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray2"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="90dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        >

        <ImageView
            android:id="@+id/typeIV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.20"
            app:layout_constraintHeight_percent="0.96"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toEndOf="@id/typeIV"
            app:layout_constraintTop_toTopOf="@id/typeIV"
            app:layout_constraintBottom_toBottomOf="@id/typeIV"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        >

        <ImageView
            android:id="@+id/dateIV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.20"
            app:layout_constraintHeight_percent="0.96"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toEndOf="@id/dateIV"
            app:layout_constraintTop_toTopOf="@id/dateIV"
            app:layout_constraintBottom_toBottomOf="@id/dateIV"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"

        >

        <Button
            android:id="@+id/applyBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_shape"
            android:backgroundTint="@color/white"
            android:text="@string/apply"
            android:textSize="@dimen/_18sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.45"
            android:textAllCaps="false"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>