<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ResetPassFragment"
    android:background="@color/gray">


            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gdh04"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.04"/>
            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gdh08"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.08"/>
            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gdh25"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25"/>

            <TextView
                android:id="@+id/signupTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/britannic_medium"
                android:text="@string/resetPass"
                android:textColor="@color/white"
                android:textSize="@dimen/_30ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gdh08"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                app:layout_constraintWidth_percent="0.7"
                app:layout_constraintBottom_toTopOf="@id/gdh25"

                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/loginvector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gdh04">
                <androidx.constraintlayout.widget.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gdh30"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.30"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/newPassField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/gdh30"
                    app:layout_constraintWidth_percent="0.82"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:passwordToggleDrawable="@drawable/show_password_selector"
                    app:passwordToggleEnabled="true"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="@string/newPass"
                        android:inputType="textPassword"
                        android:minHeight="@dimen/_40sdp"

                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleDrawable="@drawable/show_password_selector"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmNewPassField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.82"
                    app:layout_constraintTop_toBottomOf="@id/newPassField"
                    app:layout_constraintStart_toStartOf="@id/newPassField"
                    app:layout_constraintEnd_toEndOf="@id/newPassField"
                    android:layout_marginTop="@dimen/_20sdp"

                    app:passwordToggleDrawable="@drawable/show_password_selector"
                    app:passwordToggleEnabled="true"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="@string/confirmNewPass"
                        android:inputType="textPassword"
                        android:minHeight="@dimen/_40sdp"

                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleDrawable="@drawable/show_password_selector"
                        />

                </com.google.android.material.textfield.TextInputLayout>




                <Button
                    android:id="@+id/done_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/login_shape"
                    android:backgroundTint="@color/gray"
                    android:minHeight="@dimen/_40sdp"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/confirmNewPassField"
                    app:layout_constraintStart_toStartOf="@id/confirmNewPassField"
                    app:layout_constraintTop_toBottomOf="@id/confirmNewPassField"

                    />




            </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>